--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -19,6 +19,7 @@
 <script type='text/javascript' src='scripts/knockout-customisations.js'></script>
 <script type='text/javascript' src='scripts/training.js'></script>
 <script type='text/javascript' src='scripts/user.js'></script>
+<script type='text/javascript' src='scripts/course.js'></script>
 <script type='text/javascript' src='scripts/utils.js'></script>
 <script type='text/javascript' src='scripts/testdata.js'></script>
 
@@ -219,10 +220,7 @@
                         </div>
                         <div class="col-md-12 lp_course_expanded_description">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                <span data-bind="text: extraTrainingInfo.description"></span>
                             </p>
                         </div>
                         <div class="col-md-12 lp_course_expanded_links">
