Adjust CSS and .js URLs to point to rawgit, branch 'grid'

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -7,22 +7,22 @@
 
 <body>
 
-<link href="styles/lib/bootstrap/bootstrap.css" rel="stylesheet">
-<link href="styles/lib/bootstrap/bootstrap-responsive.css" rel="stylesheet">
-<link href="styles/toplevel.css" rel="stylesheet">
+<link href="https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/styles/lib/bootstrap/bootstrap.css" rel="stylesheet">
+<link href="https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/styles/lib/bootstrap/bootstrap-responsive.css" rel="stylesheet">
+<link href="https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/styles/toplevel.css" rel="stylesheet">
 
-<script type='text/javascript' src='scripts/lib/jquery/jquery-1.11.0.min.js'></script>
-<script type='text/javascript' src='scripts/lib/knockout/knockout-3.2.0.min.js'></script>
-<script type='text/javascript' src='scripts/lib/moment/moment.min.js'></script>
-<script type='text/javascript' src='scripts/lib/textoverflowclamp/TextOverflowClamp.js'></script>
-<script type='text/javascript' src='scripts/main.js'></script>
-<script type='text/javascript' src='scripts/knockout-customisations.js'></script>
-<script type='text/javascript' src='scripts/training.js'></script>
-<script type='text/javascript' src='scripts/user.js'></script>
-<script type='text/javascript' src='scripts/course.js'></script>
-<script type='text/javascript' src='scripts/utils.js'></script>
-<script type='text/javascript' src='scripts/browser.js'></script>
-<script type='text/javascript' src='scripts/testdata.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/scripts/lib/jquery/jquery-1.11.0.min.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/scripts/lib/knockout/knockout-3.2.0.min.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/scripts/lib/moment/moment.min.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/scripts/lib/textoverflowclamp/TextOverflowClamp.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/scripts/main.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/scripts/knockout-customisations.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/scripts/training.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/scripts/user.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/scripts/course.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/scripts/utils.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/scripts/browser.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/scripts/testdata.js'></script>
 
 
 <div class="lp_body">
