--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE">
     <title>Learning Plan</title>
-    <link href="styles/lib/bootstrap/bootstrap.css" rel="stylesheet">
-    <link href="styles/lib/bootstrap/bootstrap-responsive.css" rel="stylesheet">
-    <link href="styles/toplevel.css" rel="stylesheet">
 </head>
 
 <body>
+<link href="styles/lib/bootstrap/bootstrap.css" rel="stylesheet">
+<link href="styles/lib/bootstrap/bootstrap-responsive.css" rel="stylesheet">
+<link href="styles/toplevel.css" rel="stylesheet">
+
 <script type='text/javascript' src='scripts/lib/jquery/jquery-1.11.0.min.js'></script>
 <script type='text/javascript' src='scripts/lib/knockout/knockout-3.2.0.min.js'></script>
 <script type='text/javascript' src='scripts/main.js'></script>
@@ -18,6 +19,21 @@
 <script type='text/javascript' src='scripts/user.js'></script>
 <script type='text/javascript' src='scripts/utils.js'></script>
 <script type='text/javascript' src='scripts/testdata.js'></script>
+
+<!--
+<link href="https://rawgit.com/cjosw/testlp/uat_20150507/main/src/webapp/WEB-INF/styles/lib/bootstrap/bootstrap.css" rel="stylesheet">
+<link href="https://rawgit.com/cjosw/testlp/uat_20150507/main/src/webapp/WEB-INF/styles/lib/bootstrap/bootstrap-responsive.css" rel="stylesheet">
+<link href="https://rawgit.com/cjosw/testlp/uat_20150507/main/src/webapp/WEB-INF/styles/toplevel.css" rel="stylesheet">
+
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/uat_20150507/main/src/webapp/WEB-INF/scripts/lib/jquery/jquery-1.11.0.min.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/uat_20150507/main/src/webapp/WEB-INF/scripts/lib/knockout/knockout-3.2.0.min.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/uat_20150507/main/src/webapp/WEB-INF/scripts/main.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/uat_20150507/main/src/webapp/WEB-INF/scripts/knockout-customisations.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/uat_20150507/main/src/webapp/WEB-INF/scripts/training.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/uat_20150507/main/src/webapp/WEB-INF/scripts/user.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/uat_20150507/main/src/webapp/WEB-INF/scripts/utils.js'></script>
+<script type='text/javascript' src='https://rawgit.com/cjosw/testlp/uat_20150507/main/src/webapp/WEB-INF/scripts/testdata.js'></script>
+-->
 
 <div class="container-fluid lp_body">
 
