Use a known URL prefix to retrieve images

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -42,7 +42,7 @@
         </div>
         <div class="col-md-1 lp_heading_content lp_heading_image_container">
             <div class="lp_heading_cropper image-cropper">
-                <img class="lp_heading_content" src="images/Mona_Lisa_cropped150.jpg">
+                <img class="lp_heading_content" data-bind="src: userImageSrc()">
             </div>
         </div>
         <div class="col-md-2 lp_heading_content">
