--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -317,9 +317,11 @@
     <script type="text/javascript">
         var options = {
             userId: "" /* {CurrentUser} */
-            ,rootAPIUrl: 'https://dev.kallidus.com/DevEval/LMS/Handlers/ApiProxy.ashx/'
-            ,rootUIUrl: 'http://dev.kallidus.com/DevEval/LMS/'
-            ,rootImagesUrl: 'https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/'
+//            ,rootAPIUrl: 'https://dev.kallidus.com/DevEval/LMS/Handlers/ApiProxy.ashx/'
+//            ,rootUIUrl: 'http://dev.kallidus.com/DevEval/LMS/'
+            ,rootAPIUrl: '/DevEval/LMS/Handlers/ApiProxy.ashx/'
+            ,rootUIUrl: '/DevEval/LMS/'
+            ,rootContentUrl: 'https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/'
             ,useDummyUser: "false"
             ,useRealTrainingData: "true"
 //            ,useDummyTrainingData: "true"
